kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: a876bf88740f74d04a4e28c4e92948db-2122727902.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /admin(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: admin-service
            port:
              number: 8082
      - path: /grafana(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
      - path: /echo(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo-service
            port:
              number: 8081
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: greeter-service
            port:
              number: 80
